tests/moonshot/snapshots/r#mod__moonshot__fixtures__snapshot_parse_simple_text_request.snap
---
source: tests/moonshot/fixtures.rs
expression: messages
---
- role: User
  parts:
    - Text: "Say \"world\" in one word."
