tests/moonshot/snapshots/r#mod__moonshot__fixtures__snapshot_parse_simple_text_response.snap
---
source: tests/moonshot/fixtures.rs
expression: response
---
message:
  role: Assistant
  parts:
    - Reasoning: "The user wants me to say \"world\" in one word. The word \"world\" is already one word. So I should just respond with \"world\".\n\nHowever, looking at the phrasing carefully: \"Say 'world' in one word.\" This could be interpreted as:\n1. Just say the word \"world\" (which is one word)\n2. Provide a synonym for \"world\" that is one word\n3. Translate \"world\" into another language using one word\n\nGiven the simplicity and directness of the request, the most straightforward interpretation is that they want me to output the word \"world\", or perhaps they're testing if I'll follow instructions literally.\n\nThe safest, most literal answer is simply: World\n\nOr if they want a synonym: Earth, Globe, Universe, Planet, etc.\n\nBut given the specific phrasing \"Say 'world' in one word\", I think they just want me to output the word \"world\". It's already one word, so I should just say it.\n\nI'll go with the literal interpretation and just provide the word."
    - Text: World
finish_reason: Stop
usage:
  input_tokens: 15
  output_tokens: 218
  total_tokens: 233
  reasoning_tokens: ~
  cached_input_tokens: 15
  provider_details:
    raw:
      cached_tokens: 15
      completion_tokens: 218
      prompt_tokens: 15
      prompt_tokens_details:
        cached_tokens: 15
      total_tokens: 233
provider_response_id: chatcmpl-69c02518ba4f1a36c35e6882
provider_metadata:
  raw_usage:
    cached_tokens: 15
    completion_tokens: 218
    prompt_tokens: 15
    prompt_tokens_details:
      cached_tokens: 15
    total_tokens: 233
