tests/moonshot/snapshots/r#mod__moonshot__fixtures__snapshot_parse_tool_result_stream.snap
---
source: tests/moonshot/fixtures.rs
expression: events
---
- TextDelta: ""
- ReasoningDelta: The
- ReasoningDelta: " function"
- ReasoningDelta: " returned"
- ReasoningDelta: " the"
- ReasoningDelta: " weather"
- ReasoningDelta: " information"
- ReasoningDelta: " for"
- ReasoningDelta: " Shanghai"
- ReasoningDelta: ":"
- ReasoningDelta: " "
- ReasoningDelta: "28"
- ReasoningDelta: °C
- ReasoningDelta: " and"
- ReasoningDelta: " Cloud"
- ReasoningDelta: y
- ReasoningDelta: "."
- ReasoningDelta: " I"
- ReasoningDelta: " should"
- ReasoningDelta: " present"
- ReasoningDelta: " this"
- ReasoningDelta: " information"
- ReasoningDelta: " clearly"
- ReasoningDelta: " to"
- ReasoningDelta: " the"
- ReasoningDelta: " user"
- ReasoningDelta: "."
- TextDelta: The
- TextDelta: " current"
- TextDelta: " weather"
- TextDelta: " in"
- TextDelta: " **"
- TextDelta: Sh
- TextDelta: anghai
- TextDelta: "**"
- TextDelta: " is"
- TextDelta: ":\n\n"
- TextDelta: "-"
- TextDelta: " **"
- TextDelta: Temperature
- TextDelta: "**:"
- TextDelta: " "
- TextDelta: "28"
- TextDelta: °C
- TextDelta: "\n"
- TextDelta: "-"
- TextDelta: " **"
- TextDelta: Condition
- TextDelta: "**:"
- TextDelta: " Cloud"
- TextDelta: y
- TextDelta: "\n\n"
- TextDelta: "It's"
- TextDelta: " a"
- TextDelta: " warm"
- TextDelta: " but"
- TextDelta: " over"
- TextDelta: cast
- TextDelta: " day"
- TextDelta: " in"
- TextDelta: " Shanghai"
- TextDelta: "."
- TextDelta: " You"
- TextDelta: " might"
- TextDelta: " want"
- TextDelta: " to"
- TextDelta: " bring"
- TextDelta: " a"
- TextDelta: " light"
- TextDelta: " jacket"
- TextDelta: " in"
- TextDelta: " case"
- TextDelta: " it"
- TextDelta: " gets"
- TextDelta: " cooler"
- TextDelta: ","
- TextDelta: " and"
- TextDelta: " consider"
- TextDelta: " an"
- TextDelta: " umbrella"
- TextDelta: " if"
- TextDelta: " there's"
- TextDelta: " a"
- TextDelta: " chance"
- TextDelta: " of"
- TextDelta: " rain"
- TextDelta: " with"
- TextDelta: " the"
- TextDelta: " cloudy"
- TextDelta: " conditions"
- TextDelta: "."
- Finish: Stop
